<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_app"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/layout_create_user"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/ed_username"
            android:layout_width="@dimen/edittext_username_size_w"
            android:layout_height="wrap_content"
            android:hint="username"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_edittext_createuser" />

        <Button
            android:id="@+id/btn_create_username"
            android:layout_width="@dimen/button_createuser_size_w"
            android:layout_height="@dimen/button_createuser_size_h"
            android:layout_marginTop="20dp"
            android:background="@drawable/state_bg_btn"
            android:text="@string/text_create_user"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_button_createuser" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <Button
            android:id="@+id/btn_numbermemory"
            android:layout_width="@dimen/bg_button_size_w"
            android:layout_height="@dimen/bg_button_size_h"
            android:background="@drawable/state_bg_btn"
            android:text="@string/text_number_memory"
            android:textColor="@android:color/white"
            android:textSize="@dimen/bg_button_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_colormemory"
            android:layout_width="@dimen/bg_button_size_w"
            android:layout_height="@dimen/bg_button_size_h"
            android:background="@drawable/state_bg_btn"
            android:text="@string/text_color_memory"
            android:textColor="@android:color/white"
            android:textSize="@dimen/bg_button_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_picturememory"
            android:layout_width="@dimen/bg_button_size_w"
            android:layout_height="@dimen/bg_button_size_h"
            android:background="@drawable/state_bg_btn"
            android:text="@string/text_picture_memory"
            android:textColor="@android:color/white"
            android:textSize="@dimen/bg_button_text_size"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>