<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_app">

    <ImageButton
        android:id="@+id/img_btn_back"
        android:layout_width="@dimen/button_back_size"
        android:layout_height="@dimen/button_back_size"
        android:layout_margin="10dp"
        android:background="@drawable/state_bg_btn_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/img_btn_back"
        android:gravity="center"
        android:orientation="vertical">


        <Button
            android:id="@+id/btn_play"
            android:layout_width="@dimen/bg_button_size_w"
            android:layout_height="@dimen/bg_button_size_h"
            android:background="@drawable/state_bg_btn"
            android:text="@string/text_play"
            android:textColor="@android:color/white"
            android:textSize="@dimen/bg_button_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_help"
            android:layout_width="@dimen/bg_button_size_w"
            android:layout_height="@dimen/bg_button_size_h"
            android:background="@drawable/state_bg_btn"
            android:text="@string/text_help"
            android:textColor="@android:color/white"
            android:textSize="@dimen/bg_button_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_bang_thanh_tich"
            android:layout_width="@dimen/bg_button_size_w"
            android:layout_height="@dimen/bg_button_size_h"
            android:background="@drawable/state_bg_btn"
            android:text="@string/text_bang_thanh_tich"
            android:textColor="@android:color/white"
            android:textSize="@dimen/bg_button_text_size"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
